--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pyscript",
+  "name": "pyscript-js",
   "version": "0.0.1",
   "description": "JavaScript for Python Developers",
   "main": "dist/js/pyscript.js",
