--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pyscript-js",
-  "version": "0.0.9",
+  "name": "pyscript",
+  "version": "0.0.10",
   "description": "JavaScript for Python Developers",
   "main": "dist/js/pyscript-node.min.js",
   "scripts": {
@@ -23,5 +23,8 @@
   "bugs": {
     "url": "https://github.com/Yaseen549/pyscript-js/issues"
   },
-  "homepage": "https://github.com/Yaseen549/pyscript-js#readme"
+  "homepage": "https://github.com/Yaseen549/pyscript-js#readme",
+  "directories": {
+    "test": "test"
+  }
 }
