--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "pyscript",
-  "version": "0.0.11",
+  "name": "pyscript-js",
+  "version": "1.0.0",
   "description": "JavaScript for Python Developers",
   "main": "dist/js/pyscript-node.min.js",
   "scripts": {
