--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pyscript-js",
-  "version": "1.2.0",
+  "version": "1.2.4",
   "description": "JavaScript for Python Developers",
   "main": "dist/js/pyscript-node.min.js",
   "scripts": {
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/Yaseen549/pyscript-js/issues"
   },
-  "homepage": "https://github.com/Yaseen549/pyscript-js#readme",
+  "homepage": "https://pyscript-js.syberstar.com/",
   "directories": {
     "test": "test"
   }
